[gd_scene load_steps=8 format=3 uid="uid://ceqyh5kgdtkew"]

[ext_resource type="Theme" uid="uid://b5kvna3pduhqe" path="res://Menu/Menu_Theme.tres" id="1_pis0b"]
[ext_resource type="Script" path="res://Menu/Player Menu/PlayerMenuScripts/inventory_equipment.gd" id="1_r5kl7"]
[ext_resource type="Texture2D" uid="uid://drjc6csjikfqp" path="res://Assets/Complete_GUI_Essential_Pack_Free_Version/01_Basic_Collection/01_Flat_Theme/Sprites/UI_Flat_Textfield_01.png" id="3_ooqn2"]

[sub_resource type="SystemFont" id="SystemFont_yo4cx"]
font_names = PackedStringArray("Monospace")
font_weight = 600
multichannel_signed_distance_field = true

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ktryy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t0equ"]

[sub_resource type="SystemFont" id="SystemFont_bf8tw"]
font_names = PackedStringArray("Monospace")
font_weight = 600
multichannel_signed_distance_field = true

[node name="Inventory_Equipment" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r5kl7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Equipment_Options" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Weapon_btn" type="Button" parent="VBoxContainer/Equipment_Options"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_pis0b")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_yo4cx")
theme_override_font_sizes/font_size = 18
toggle_mode = true
button_pressed = true
text = "Weapon"

[node name="Armor_btn" type="Button" parent="VBoxContainer/Equipment_Options"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_pis0b")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_yo4cx")
theme_override_font_sizes/font_size = 18
toggle_mode = true
text = "Armor"

[node name="Accessory_btn" type="Button" parent="VBoxContainer/Equipment_Options"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_pis0b")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_yo4cx")
theme_override_font_sizes/font_size = 18
toggle_mode = true
text = "Accessories
"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 7
theme_override_styles/separator = SubResource("StyleBoxEmpty_ktryy")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 30

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/separator = SubResource("StyleBoxFlat_t0equ")

[node name="ItemQty_Label" type="RichTextLabel" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 25)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = SubResource("SystemFont_bf8tw")
theme_override_font_sizes/normal_font_size = 14
text = "Item Quantity
"
fit_content = true
scroll_active = false
autowrap_mode = 0
shortcut_keys_enabled = false

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/separator = SubResource("StyleBoxFlat_t0equ")

[node name="ItemName_Label" type="RichTextLabel" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = SubResource("SystemFont_bf8tw")
theme_override_font_sizes/normal_font_size = 14
text = "Item Name
"
fit_content = true
scroll_active = false
autowrap_mode = 0
shortcut_keys_enabled = false

[node name="Inventory_Items_Container" type="NinePatchRect" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("3_ooqn2")
patch_margin_left = 3
patch_margin_top = 1
patch_margin_right = 3
patch_margin_bottom = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Inventory_Items_Container"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Weapon_List_Container" type="ScrollContainer" parent="VBoxContainer/Inventory_Items_Container/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Inventory_Items_Container/MarginContainer/Weapon_List_Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 40

[node name="Armor_List_Container" type="ScrollContainer" parent="VBoxContainer/Inventory_Items_Container/MarginContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Inventory_Items_Container/MarginContainer/Armor_List_Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 45

[node name="Accessory_List_Container" type="ScrollContainer" parent="VBoxContainer/Inventory_Items_Container/MarginContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Inventory_Items_Container/MarginContainer/Accessory_List_Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 45

[connection signal="toggled" from="VBoxContainer/Equipment_Options/Weapon_btn" to="." method="_handle_button_toggled" binds= ["weapon"]]
[connection signal="toggled" from="VBoxContainer/Equipment_Options/Armor_btn" to="." method="_handle_button_toggled" binds= ["armor"]]
[connection signal="toggled" from="VBoxContainer/Equipment_Options/Accessory_btn" to="." method="_handle_button_toggled" binds= ["accessory"]]
